# ice-melt-simulation

./: .gitignore  CMakeLists.txt
docs/: index.html
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: CMakeLists.txt  data_struct.cpp  data_struct.h  glad.c  ice.cpp  ice.h  iceVoxel.cpp  iceVoxel.h  main.cpp  render.cpp  rendersnippet.cpp
website/: IceMeltSimulator_report_.html
website/Ice Melt Simulator (report) (1)/: IceMeltSimulator_report_.html
